--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 100%;
+    font-family: 'Roboto', sans-serif;
+
+}
+
 .container {
     width: 100%;
     height: 100vh;
@@ -18,4 +24,8 @@
     background-color: mediumturquoise;
     border-radius: 25px;
 
+}
+
+header {
+    padding: 20px;
 }
