--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,12 @@ html {
 .add-list {
     margin: 2em 0;
     width: 100%;
+    height: 80px;
     border: 1px solid black;
     border-radius: 20px;
     padding: 0.7em;
     display: flex;
+    align-items: center;
     justify-content: space-around;
 }
 
@@ -46,6 +48,9 @@ html {
     width: calc(100% - 4em);
     border-style: none;
     outline: none;
+}
+.list ul {
+    height: calc(100% - 80px);
 }
 
 .list ul li{
