--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,13 @@ html {
     padding: 20px;
 
 }
+header {
+    height: 100px;
+}
 
+main {
+    height: calc(100% - 100px);
+}
 .add-list {
     margin: 2em 0;
     width: 100%;
@@ -49,8 +55,9 @@ html {
     border-style: none;
     outline: none;
 }
-.list ul {
-    height: calc(100% - 80px);
+.list {
+    overflow-y: auto;
+    height: calc(100% - 150px);
 }
 
 .list ul li{
